# friends-planner

./: .gitignore  README.md  compose.yaml  process_logo.py
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: config.py  db.py  main.py  realtime.py
apps/api/src/items/: router.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx  Dashboard.tsx  Login.tsx  api.ts  index.css  useRealtime.ts
apps/web/src/views/: BoardView.tsx  CalendarView.tsx  ItemCard.tsx  ListView.tsx
